--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -14,9 +14,10 @@
     <div class="div">
         
         <input type="text" id="visor" readonly>
-        <button onclick="addVisor(1)">1</button>
-        <button onclick="addVisor(2)">2</button>
-        <button onclick="addVisor('+')">+</button>
+        <button onclick="addVisor('1')">1</button>
+        <button onclick="addVisor('2')">2</button>
+        <button onclick="soma()">+</button>
+        <button onclick="resultado()">=</button>
     
     </div>
 
