atualização-novas-funcionalidades

--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -16,8 +16,12 @@
         <input type="text" id="visor" readonly>
         <button onclick="addVisor('1')">1</button>
         <button onclick="addVisor('2')">2</button>
-        <button onclick="soma()">+</button>
+        <button onclick="expoente('+')">+</button>
+        <button onclick="expoente('-')">-</button>
+        <button onclick="expoente('*')">*</button>
+        <button onclick="expoente('/')">/</button>
         <button onclick="resultado()">=</button>
+        <button onclick="limpar()" >CE</button>
     
     </div>
 
