--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -13,7 +13,9 @@
     
     <div class="div">
         
+        <textarea id="historico" readonly></textarea>
         <input type="text" id="visor" readonly>
+        <button onclick="addVisor('0')">0</button>
         <button onclick="addVisor('1')">1</button>
         <button onclick="addVisor('2')">2</button>
         <button onclick="expoente('+')">+</button>
