--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,12 +18,21 @@
         <button onclick="addVisor('0')">0</button>
         <button onclick="addVisor('1')">1</button>
         <button onclick="addVisor('2')">2</button>
+        <button onclick="addVisor('3')">3</button>
+        <button onclick="addVisor('4')">4</button>
+        <button onclick="addVisor('5')">5</button>
+        <button onclick="addVisor('6')">6</button>
+        <button onclick="addVisor('7')">7</button>
+        <button onclick="addVisor('8')">8</button>
+        <button onclick="addVisor('9')">9</button>
+
+        <button onclick="expoente('.')">,</button>
         <button onclick="expoente('+')">+</button>
         <button onclick="expoente('-')">-</button>
         <button onclick="expoente('*')">*</button>
         <button onclick="expoente('/')">/</button>
         <button onclick="resultado()">=</button>
-        <button onclick="limpar()" >CE</button>
+        <button onclick="limpar()" >C</button>
     
     </div>
 
