--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -33,6 +33,7 @@
         <button onclick="expoente('/')">/</button>
         <button onclick="resultado()">=</button>
         <button onclick="limpar()" >C</button>
+        <button onclick="" >APAGAR </button>
     
     </div>
 
