--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -26,14 +26,14 @@
         <button onclick="addVisor('8')">8</button>
         <button onclick="addVisor('9')">9</button>
 
-        <button onclick="expoente('.')">,</button>
+        <button onclick="pontuacao()">,</button>
         <button onclick="expoente('+')">+</button>
         <button onclick="expoente('-')">-</button>
         <button onclick="expoente('*')">*</button>
         <button onclick="expoente('/')">/</button>
         <button onclick="resultado()">=</button>
         <button onclick="limpar()" >C</button>
-        <button onclick="" >APAGAR </button>
+        <button onclick="apagar()" >APAGAR </button>
     
     </div>
 
