--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -11,7 +11,7 @@
 </head>
 <body id="body">
     
-    <button onclick="trocarCor()" >Trocar cor</button>
+    <button id="trocaDeCor" onclick="trocarCor()"  class="black">Trocar cor</button>
 
 
     <div id="calculadora" class="div">
