--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -35,13 +35,13 @@
             <button class="number" onclick="addVisor('5')">5</button>
             <button class="number" onclick="addVisor('6')">6</button>
 
-            <button onclick="expoente('*')">*</button>
+            <button onclick="expoente('*')">x</button>
 
             <button class="number" onclick="addVisor('7')">7</button>
             <button class="number" onclick="addVisor('8')">8</button>
             <button class="number" onclick="addVisor('9')">9</button>
 
-            <button onclick="expoente('/')">/</button>
+            <button onclick="expoente('/')">&#247;</button>
 
             <button id="zero" class="number" onclick="addVisor('0')">0</button>
 
