--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     
  
 </head>
 <body id="body">
     
-    <button id="trocaDeCor" onclick="trocarCor()"  class="black">Trocar cor</button>
+    <button id="trocaDeCor" onclick="trocarCor()"  class="black"><i class="fas fa-sun sun-icon"></i></button>
 
 
     <div id="calculadora" class="div">
