--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -17,11 +17,11 @@
 
 
     <!-- Botão para trocar de padrão de cores -->
-    <button id="trocaDeCor" onclick="trocarCor()"  class="black"><i id="buttonCor" class="fas fa-sun sun-icon"></i></button>
+    <button id="buttonTrocaDeCor" onclick="buttonTrocarCor()"  class="black"><i id="buttonCor" class="fas fa-sun sun-icon"></i></button>
 
 
     <!-- Corpo da Calculadora -->
-    <div id="calculadora" class="div">
+    <div id="calculadora" class="padraoDeCorUm">
 
 
         <!-- Visor e Historico -->
