--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -29,7 +29,7 @@
         <input type="text" id="visor" readonly>
 
         <!-- Botões -->
-        <div id="Numeros">
+        <div id="buttonEOperadores">
 
             <!-- 1° Linha -->
             <button  id="apagar" onclick="apagar()" >APAGAR </button>
