--- a/Pratica/Calculadora/index.html
+++ b/Pratica/Calculadora/index.html
@@ -34,25 +34,25 @@
             <!-- 1° Linha -->
             <button  id="apagar" onclick="apagar()" >APAGAR </button>
             <button onclick="limpar()">C</button>
-            <button onclick="expoente('+')">+</button>
+            <button onclick="operador('+')">+</button>
 
             <!-- 2° linha -->
             <button class="number" onclick="addVisor('1')">1</button>
             <button class="number" onclick="addVisor('2')">2</button>
             <button class="number" onclick="addVisor('3')">3</button>
-            <button onclick="expoente('-')">-</button>
+            <button onclick="operador('-')">-</button>
 
             <!-- 3° linha -->
             <button class="number" onclick="addVisor('4')">4</button>
             <button class="number" onclick="addVisor('5')">5</button>
             <button class="number" onclick="addVisor('6')">6</button>
-            <button onclick="expoente('*')">x</button>
+            <button onclick="operador('*')">x</button>
 
             <!-- 4° linha -->
             <button class="number" onclick="addVisor('7')">7</button>
             <button class="number" onclick="addVisor('8')">8</button>
             <button class="number" onclick="addVisor('9')">9</button>
-            <button onclick="expoente('/')">&#247;</button>
+            <button onclick="operador('/')">&#247;</button>
 
             <!-- 5° linha -->
             <button id="zero" class="number" onclick="addVisor('0')">0</button>
